fixed bugs & add 2 simple tests